# expense_resolver

./: .Expense.hpp.swp  .Person.hpp.swp  .gitignore  CMakeLists.txt  Expense.cpp  Expense.hpp  Person.cpp  Person.hpp  README.md  build.sh  expenses.txt  main.cpp  people.txt
